refactor: 멀티모듈, 책임 재분리 (애뮬, 수신, 메인)

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'pickcarprac'
 
 include 'module-emulator'
-include 'module-gps'
-include 'module-recieve'
+include 'module-server'
+include 'module-receive-server'
